# julian

./: README.md  SETUP.md  TEST.md  default.nix  pyproject.toml
.gemini/: config.yaml  patterns.md  styleguide.md
guidelines/: go.md  nix.md  python.md  security.md  swift.md  typescript.md  universal.md
scripts/: setup-secrets.sh
src/: bad_service.py  config.py  diff_parser.py  errors.py  gemini_client.py  github_auth.py  main.py  utils.py  webhook_handler.py
src/clients/: github.py
src/models/: github.py
