[project]
name = "julian"
version = "0.1.0"
description = "Trailer Park Boys Pattern Enforcer - Julian reviews PRs for coding pattern compliance"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "aiohttp>=3.9.0",
    "pyjwt>=2.8.0",
    "cryptography>=42.0.0",
    "google-auth>=2.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
